--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
     mavenCentral()
 }
 
-defaultTasks 'clean','test','run'
+defaultTasks 'clean','test'
 
 dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '19.0'
